Verify account (#123)